--- a/config/module.ini
+++ b/config/module.ini
@@ -1,9 +1,9 @@
 [info]
 name         = "Locale Switch"
-version      = "0.2.0"
+version      = "0.3.0"
 author       = "BibLibre"
 configurable = false
 description  = "Provides a view helper for allowing users to change the locale"
 module_link  = "https://github.com/biblibre/omeka-s-module-LocaleSwitch"
 author_link  = "https://www.biblibre.com/"
-omeka_version_constraint = "^3.0.0"
+omeka_version_constraint = "^3.0.0 || ^4.0.0"
